# respkit-tui

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.github/workflows/: ci.yml
docs/: architecture.md  development.md
src/: app.rs  config.rs  lib.rs  main.rs  ui.rs
src/backend/: client.rs  protocol.rs
